# spdm-emu

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: auto_sync_submodule.yml  build_CI.yml  build_CI_FIPS.yml  build_CI_TPM.yml  build_CI_for_slot_id_0xFF.yml  build_CI_for_version1.1.yml  build_CI_for_version1.2.yml  build_CI_for_version1.3.yml  build_CI_for_version1.4.yml  chunk_check.yml  chunk_device_sample.yml  pqc_check.yml
doc/: spdm_emu.md  tpm.md
script/: format_nix.sh  setup-tpm.sh
spdm-device-sample/spdm_device_sample/: CMakeLists.txt
spdm-device-sample/spdm_device_sample/include/: spdm_lib_config.h
spdm-device-sample/spdm_device_sample/include/mbedtls/: config.h
spdm-device-sample/spdm_device_sample/spdm_device_responder/: CMakeLists.txt  compiler_stub.c  pci.c  spdm_responder.h  spdm_responder_init.c  spdm_responder_main.c  spdm_responder_pci_doe.c  support.c
spdm_emu/spdm_device_attester_sample/: CMakeLists.txt  spdm_device_attester_authentication.c  spdm_device_attester_collection.c  spdm_device_attester_measurement.c  spdm_device_attester_pci_doe.c  spdm_device_attester_sample.c  spdm_device_attester_sample.h  spdm_device_attester_spdm.c
spdm_emu/spdm_device_validator_sample/: CMakeLists.txt  spdm_device_validator_config.c  spdm_device_validator_pci_doe.c  spdm_device_validator_sample.c  spdm_device_validator_sample.h  spdm_device_validator_spdm.c
spdm_emu/spdm_device_verifier_tool/: CoRimTool.py  OpaTool.py  SpdmMeasurement.py  SpdmSamplePolicy.rego  readme.md  requirements.txt
spdm_emu/spdm_device_verifier_tool/SampleEvidence/: SpdmSampleMeasurement.json
spdm_emu/spdm_device_verifier_tool/SampleManifests/: SpdmSampleCoMid.json
spdm_emu/spdm_device_verifier_tool/SampleTestKey/: ecc-private-key.pem  ecc-public-key.pem  example.cer.pem  example.key.pem  readme.md
spdm_emu/spdm_device_verifier_tool/SampleTestKey/SampleCertChain/: TestCert.key  TestCert.pub.pem  TestRoot.key  TestRoot.pub.pem  TestSub.key  TestSub.pub.pem
spdm_emu/spdm_emu_common/: command.c  command.h  key.c  nv_storage.c  nv_storage.h  os_include.h  pcap.c  spdm_emu.c  spdm_emu.h  support.c
spdm_emu/spdm_requester_emu/: CMakeLists.txt  spdm_requester.c  spdm_requester_authentication.c  spdm_requester_emu.c  spdm_requester_emu.h  spdm_requester_endpoint_info.c  spdm_requester_key_pair_info.c  spdm_requester_mctp.c  spdm_requester_measurement.c  spdm_requester_pci_doe.c  spdm_requester_session.c  spdm_requester_slot_management.c  spdm_requester_spdm.c  spdm_requester_tcp.c
spdm_emu/spdm_responder_emu/: CMakeLists.txt  spdm-responder-emu.service  spdm_responder.c  spdm_responder_emu.c  spdm_responder_emu.h  spdm_responder_mctp.c  spdm_responder_pci_doe.c  spdm_responder_session.c  spdm_responder_spdm.c  spdm_responder_tcp.c
spdm_emu/spdm_responder_validator_emu/: CMakeLists.txt  spdm_requester_pci_doe.c  spdm_requester_spdm.c  spdm_responder_validator_config.c  spdm_responder_validator_emu.c  spdm_responder_validator_emu.h
spdm_emu/spdm_transport_none_lib/: common.c  none.c  spdm_transport_none_lib.h
