cmake_minimum_required(VERSION 3.5)

project("spdm_emu" C)

#
# Build Configuration Macro Definition
#
message("#########################")
message("## Build Configuration ##")
message("#########################")

set(CMAKE_GENERATOR ${CMAKE_GENERATOR} CACHE STRING "Choose the generator of cmake")
set(ARCH ${ARCH} CACHE STRING "Choose the arch of build: ia32 x64 arm aarch64 riscv32 riscv64 arc" FORCE)
set(TOOLCHAIN ${TOOLCHAIN} CACHE STRING "Choose the toolchain of build: Windows: VS2015 VS2019 VS2022 CLANG ARM_DS2022 LIBFUZZER Linux: GCC ARM_GCC AARCH64_GCC RISCV32_GCC RISCV64_GCC ARC_GCC ARM_DS2022 CLANG CBMC AFL KLEE LIBFUZZER" FORCE)
set(CMAKE_BUILD_TYPE ${TARGET} CACHE STRING "Choose the target of build: Debug Release" FORCE)
set(CRYPTO ${CRYPTO} CACHE STRING "Choose the crypto of build: mbedtls openssl" FORCE)
set(GCOV ${GCOV} CACHE STRING "Choose the target of Gcov: ON  OFF, and default is OFF" FORCE)
set(DEVICE ${DEVICE} CACHE STRING "Choose the device of build: tpm sample" FORCE)

if(NOT GCOV)
    set(GCOV "OFF")
endif()

if (NOT DEVICE)
    set(DEVICE "sample")
endif()

set(SPDM_EMU_DIR ${PROJECT_SOURCE_DIR})
set(LIBSPDM_DIR ${PROJECT_SOURCE_DIR}/libspdm)
set(SPDM_RESPONDER_VALIDATOR_DIR ${PROJECT_SOURCE_DIR}/SPDM-Responder-Validator)
set(COMMON_TEST_FRAMEWORK_DIR ${PROJECT_SOURCE_DIR}/SPDM-Responder-Validator/common_test_framework)

#
# OpenSSL specific compiled libraries.
#
set(COMPILED_LIBCRYPTO_PATH ${COMPILED_LIBCRYPTO_PATH} CACHE STRING "Optionally provide a path to libcrypto" FORCE)
set(COMPILED_LIBSSL_PATH ${COMPILED_LIBSSL_PATH} CACHE STRING "Optionally provide a path to libssl" FORCE)

message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")

if(ARCH STREQUAL "x64")
    message("ARCH = x64")
elseif(ARCH STREQUAL "ia32")
    message("ARCH = ia32")
elseif(ARCH STREQUAL "arm")
    message("ARCH = arm")
elseif(ARCH STREQUAL "aarch64")
    message("ARCH = aarch64")
elseif(ARCH STREQUAL "riscv32")
    message("ARCH = riscv32")
elseif(ARCH STREQUAL "riscv64")
    message("ARCH = riscv64")
elseif(ARCH STREQUAL "arc")
    message("ARCH = arc")
elseif(ARCH STREQUAL "nios2")
    message("ARCH = nios2")
else()
    message(FATAL_ERROR "Unkown ARCH")
endif()

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    if(TOOLCHAIN STREQUAL "GCC")
        message("TOOLCHAIN = GCC")
    elseif(TOOLCHAIN STREQUAL "CLANG")
        message("TOOLCHAIN = CLANG")
    elseif(TOOLCHAIN STREQUAL "CBMC")
        message("TOOLCHAIN = CBMC")
    elseif(TOOLCHAIN STREQUAL "AFL")
        message("TOOLCHAIN = AFL")
    elseif(TOOLCHAIN STREQUAL "KLEE")
        message("TOOLCHAIN = KLEE")
    elseif(TOOLCHAIN STREQUAL "LIBFUZZER")
        message("TOOLCHAIN = LIBFUZZER")
    elseif(TOOLCHAIN STREQUAL "ARM_GCC")
        message("TOOLCHAIN = ARM_GCC")
    elseif(TOOLCHAIN STREQUAL "AARCH64_GCC")
        message("TOOLCHAIN = AARCH64_GCC")
    elseif(TOOLCHAIN STREQUAL "RISCV32_GCC")
        message("TOOLCHAIN = RISCV32_GCC")
    elseif(TOOLCHAIN STREQUAL "RISCV64_GCC")
        message("TOOLCHAIN = RISCV64_GCC")
    elseif(TOOLCHAIN STREQUAL "ARM_DS2022")
        message("TOOLCHAIN = ARM_DS2022")
    elseif(TOOLCHAIN STREQUAL "ARC_GCC")
        message("TOOLCHAIN = ARC_GCC")
    elseif(TOOLCHAIN STREQUAL "NIOS2_GCC")
        message("TOOLCHAIN = NIOS2_GCC")
    else()
        message(FATAL_ERROR "Unkown TOOLCHAIN")
    endif()
    if(GCOV STREQUAL "ON")
        message("GCOV = ON")
    elseif(GCOV STREQUAL "OFF")
        message("GCOV = OFF")
    else()
        message(FATAL_ERROR "Unkown GCOV switch input")
    endif()
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    if(TOOLCHAIN STREQUAL "VS2015")
        message("TOOLCHAIN = VS2015")
    elseif(TOOLCHAIN STREQUAL "VS2019")
        message("TOOLCHAIN = VS2019")
    elseif(TOOLCHAIN STREQUAL "VS2022")
        message("TOOLCHAIN = VS2022")
    elseif(TOOLCHAIN STREQUAL "CLANG")
        message("TOOLCHAIN = CLANG")
    elseif(TOOLCHAIN STREQUAL "ARM_DS2022")
        message("TOOLCHAIN = ARM_DS2022")
    elseif(TOOLCHAIN STREQUAL "CBMC")
        message("TOOLCHAIN = CBMC")
    elseif(TOOLCHAIN STREQUAL "LIBFUZZER")
        message("TOOLCHAIN = LIBFUZZER")
    else()
        message(FATAL_ERROR "Unkown TOOLCHAIN")
    endif()
else()
    message(FATAL_ERROR "${CMAKE_SYSTEM_NAME} is not supportted")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("TARGET = Debug")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    message("TARGET = Release")
else()
    message(FATAL_ERROR "Unkown build type")
endif()

if(CRYPTO STREQUAL "mbedtls")
    message("CRYPTO = mbedtls")
elseif(CRYPTO STREQUAL "openssl")
    message("CRYPTO = openssl")
else()
    message(FATAL_ERROR "Unkown CRYPTO")
endif()

if(ENABLE_BINARY_BUILD STREQUAL "1")
    if(NOT CRYPTO STREQUAL "Openssl")
        message(FATAL_ERROR "enabling binary build not supported for non-Openssl")
    endif()

    if(NOT COMPILED_LIBCRYPTO_PATH)
        message(FATAL_ERROR "enabling binary build requires path to libcrypto.")
    endif()

    if(NOT COMPILED_LIBSSL_PATH)
        message(FATAL_ERROR "enabling binary build requires path to libssl.")
    endif()

    message("ENABLE_BINARY_BUILD=1")
    message("COMPILED_LIBCRYPTO_PATH=${COMPILED_LIBCRYPTO_PATH}")
    message("COMPILED_LIBSSL_PATH=${COMPILED_LIBSSL_PATH}")

    set(CRYPTO_LIB_PATHS ${COMPILED_LIBCRYPTO_PATH} ${COMPILED_LIBSSL_PATH})
else()
    set(CRYPTO_LIB_PATHS ${CRYPTO}lib)
    message("ENABLE_BINARY_BUILD=0; Building ${CRYPTO} library from source.")
endif()

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    set(CMAKE_EXE_EXPORTS_C_FLAG "")

    if(TOOLCHAIN STREQUAL "GCC")
        set(CMAKE_C_COMPILER gcc)
        add_compile_options(-std=c99 -g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        if (ARCH STREQUAL "x64")
            add_compile_options(-mno-red-zone)
        endif()
        if (ARCH STREQUAL "x64" OR "ia32")
            add_compile_options(-maccumulate-outgoing-args)
        endif()

        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR gcc-ar)

        if(NOT CMAKE_C_COMPILER_VERSION VERSION_GREATER_EQUAL 9.3)
                set(CMAKE_C_ARCHIVE_FINISH true)
        endif()

        set(CMAKE_LINKER gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-Wno-error -no-pie" )
        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g")
        else()
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
        endif()
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()
        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "ARM_DS2022")
        if(ARCH STREQUAL "aarch64")
            set(CMAKE_SYSTEM_NAME   Linux)
            set(CMAKE_C_COMPILER    armclang)
            set(CMAKE_AR            armar)
            set(CMAKE_LINKER        armlink)
            set(CMAKE_OBJCOPY       fromelf)

            set(CMAKE_EXECUTABLE_SUFFIX ".elf")
            set(CMAKE_LIBRARY_PATH_FLAG "--userlibpath=")
            add_compile_options(-fshort-wchar -fno-strict-aliasing  -ffunction-sections -fdata-sections -fno-common -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO)
            set(CMOCKA_FLAGS -std=gnu99 -Wpedantic )
            set(OPENSSL_FLAGS -include base.h)
            set(CMAKE_C_CREATE_STATIC_LIBRARY "armar -r -s --create <TARGET> <LINK_FLAGS> <OBJECTS>")
            set(CMAKE_SYSTEM_PROCESSOR aarch64v)
            add_compile_options(--target=aarch64-arm-none-eabi)
            set(CMAKE_EXE_LINKER_FLAGS "--target=aarch64-arm-none-eabi -flto -Wl,--undefined=__udivti3")
        elseif(ARCH STREQUAL "arm")
            set(CMAKE_SYSTEM_NAME   Linux)
            set(CMAKE_C_COMPILER    armclang)
            set(CMAKE_LINKER        armlink)
            set(CMAKE_SYSTEM_PROCESSOR arm)

            add_compile_options(--target=arm-arm-none-eabi -march=armv9-a)
            set(CMAKE_EXE_LINKER_FLAGS "--target=arm-arm-none-eabi -march=armv9-a -Wl,--undefined=__udivti3")
            set(OPENSSL_FLAGS -include base.h)
            set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
        endif()

        set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
        set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)

    elseif(TOOLCHAIN STREQUAL "ARM_GCC")
        set(CMAKE_C_COMPILER arm-linux-gnueabi-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR arm-linux-gnueabi-gcc-ar)

        set(CMAKE_LINKER arm-linux-gnueabi-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()
        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "AARCH64_GCC")
        set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR aarch64-linux-gnu-gcc-ar)

        set(CMAKE_LINKER aarch64-linux-gnu-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "RISCV32_GCC")
        set(CMAKE_C_COMPILER riscv32-unknown-linux-gnu-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR riscv32-unknown-linux-gnu-gcc-ar)

        set(CMAKE_LINKER riscv32-unknown-linux-gnu-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "RISCV64_GCC")
        set(CMAKE_C_COMPILER riscv64-linux-gnu-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR riscv64-linux-gnu-gcc-ar)

        set(CMAKE_LINKER riscv64-linux-gnu-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "ARC_GCC")
        set(CMAKE_C_COMPILER arc-linux-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        if(GCOV STREQUAL "ON")
            add_compile_options(--coverage -fprofile-arcs -ftest-coverage)
        endif()
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR arc-linux-gcc-ar)

        set(CMAKE_LINKER arc-linux-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )
        if(GCOV STREQUAL "ON")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  --coverage -lgcov -fprofile-arcs -ftest-coverage")
        endif()

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "CLANG")
        set(CMAKE_C_COMPILER clang)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall  -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common  -mno-red-zone -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO)
        if (ARCH STREQUAL "x64")
            add_compile_options(-mno-red-zone)
        endif()

        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR llvm-ar)
        set(CMAKE_RANLIB llvm-ranlib)

        set(CMAKE_LINKER clang)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error -no-pie" )

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "CBMC")
        set(CMAKE_C_COMPILER goto-cc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -maccumulate-outgoing-args -mno-red-zone -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare -DCBMC -DDEBUG_ASSERT_CHOICE=0)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_LINKER goto-cc)
        set(CMAKE_EXE_LINKER_FLAGS "-flto -Wno-error")

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <OBJECTS> -o <TARGET>")

    elseif(TOOLCHAIN STREQUAL "AFL")
        set(CMAKE_C_COMPILER afl-gcc)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall -Werror -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common -maccumulate-outgoing-args -mno-red-zone -Wno-address -fpie -fno-asynchronous-unwind-tables -DUSING_LTO  -Wno-maybe-uninitialized -Wno-uninitialized  -Wno-builtin-declaration-mismatch -Wno-nonnull-compare)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR gcc-ar)

        set(CMAKE_LINKER gcc)
        set(CMAKE_EXE_LINKER_FLAGS "-Wno-error -no-pie" )

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "KLEE")
        set(CMAKE_C_COMPILER clang)
        add_compile_options(-g -fno-strict-aliasing -Wall  -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common  -mno-red-zone -Wno-address -fpie -fno-asynchronous-unwind-tables -flto -DUSING_LTO  -emit-llvm -DTEST_WITH_KLEE=TRUE -DDEBUG_ASSERT_CHOICE=0)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_C_CREATE_STATIC_LIBRARY "")

        set(CMAKE_LINKER llvm-link)

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <OBJECTS> -o <TARGET>")

    elseif(TOOLCHAIN STREQUAL "LIBFUZZER")
        set(CMAKE_C_COMPILER clang)
        add_compile_options(-g -fshort-wchar -fno-strict-aliasing -Wall  -Wno-array-bounds -ffunction-sections -fdata-sections -fno-common  -mno-red-zone -Wno-address -fpie -fno-asynchronous-unwind-tables -DUSING_LTO  -DTEST_WITH_LIBFUZZER=TRUE -O1 -fsanitize=fuzzer,address)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR llvm-ar)

        set(CMAKE_LINKER clang)
        set(CMAKE_EXE_LINKER_FLAGS "-Wno-error -no-pie -fsanitize=fuzzer,address" )

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> <OBJECTS> -o <TARGET> -Wl,--start-group <LINK_LIBRARIES> -Wl,--end-group")

    elseif(TOOLCHAIN STREQUAL "NIOS2_GCC")
        set(CMAKE_C_COMPILER nios2-elf-gcc)
        add_compile_options(-xc -MP -MMD -pipe -O3  -Wall -Wno-maybe-uninitialized -Wno-unused-but-set-variable -Wno-nonnull-compare -Wno-int-to-pointer-cast -Wno-pointer-to-int-cast  -Wno-builtin-declaration-mismatch  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS -include base.h -Wno-error=maybe-uninitialized -Wno-error=format -Wno-format -Wno-error=unused-but-set-variable)
        set(CMOCKA_FLAGS -std=gnu99 -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -fno-common -Wformat -fno-common -fstack-protector-strong)

        set(CMAKE_AR nios2-elf-ar)

        set(CMAKE_LINKER nios2-elf-gcc)
        set(CMAKE_EXE_LINKER_FLAGS "")

        set(CMAKE_C_LINK_EXECUTABLE "")

    endif()

    if(NOT TOOLCHAIN STREQUAL "NIOS2_GCC")
        set(CMAKE_C_FLAGS_RELEASE     "-Os")
        set(CMAKE_C_FLAGS_DEBUG       "-O0")
    endif()

    if(ARCH STREQUAL "x64")
        add_compile_options(-m64 -mcmodel=small)
    elseif(ARCH STREQUAL "ia32")
        add_compile_options(-m32)
    endif()

elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    if(TOOLCHAIN STREQUAL "CLANG")
        set(CMAKE_C_COMPILER clang-cl.exe)
        add_compile_options(-fno-strict-aliasing -Wall  -Wno-array-bounds -Wno-address  -flto -DUSING_LTO  -D_CRT_SECURE_NO_WARNINGS /w)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS /FIbase.h)
        set(CMOCKA_FLAGS -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -Wformat)

        set(CMAKE_STATIC_LINKER_FLAGS "")

        set(CMAKE_LINKER lld-link.exe)
        set(CMAKE_EXE_LINKER_FLAGS "/NOLOGO /SUBSYSTEM:CONSOLE /NODEFAULTLIB:libcmt.lib /IGNORE:4086 /MLLVM:-exception-model=wineh /lldmap /OPT:REF")

        if(ARCH STREQUAL "x64")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:AMD64 /LIBPATH:'%VCToolsInstallDir%lib/x64' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x64' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x64'")
        elseif(ARCH STREQUAL "ia32")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:I386 /LIBPATH:'%VCToolsInstallDir%lib/x86' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x86' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x86'")
        endif()

        set(CMAKE_C_FLAGS_RELEASE     "-Oz")
        set(CMAKE_C_FLAGS_DEBUG       "-O0 -gcodeview")

        set(CMAKE_EXE_LINKER_FLAGS_DEBUG "/DEBUG:GHASH")

        if(ARCH STREQUAL "x64")
            add_compile_options(-m64)
        elseif(ARCH STREQUAL "ia32")
            add_compile_options(-m32 -march=i586)
        endif()

        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(CMAKE_C_STANDARD_LIBRARIES "Kernel32.lib MSVCRTD.lib vcruntimed.lib ucrtd.lib Gdi32.lib User32.lib Winmm.lib Advapi32.lib ws2_32.lib")
        elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
            set(CMAKE_C_STANDARD_LIBRARIES "Kernel32.lib MSVCRTD.lib vcruntime.lib ucrt.lib Gdi32.lib User32.lib Winmm.lib Advapi32.lib ws2_32.lib")
        endif()

     elseif(TOOLCHAIN STREQUAL "ARM_DS2022")
        set(CMAKE_C_COMPILER    "armclang.exe")
        set(CMAKE_AR            "armar.exe")
        set(CMAKE_LINKER        "armlink.exe")
        set(CMAKE_OBJCOPY       "fromelf.exe")
        set(CMAKE_SYSTEM_ARCH   "armv8.2-a")
        set(CMAKE_${lang}_COMPILER_FRONTEND_VARIANT "GNU")
        set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
        set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
        set(CMAKE_FIND_ROOT_PATH ${TOOLCHAIN_PATH})
        set(CMAKE_EXECUTABLE_SUFFIX ".elf")

        set(OPENSSL_FLAGS  -include base.h)

        if (ARCH STREQUAL "arm")
        set(CMAKE_SYSTEM_PROCESSOR ARM)
        add_compile_options(-marm)
        add_compile_options(--target=arm-arm-none-eabi)
        elseif (ARCH STREQUAL "aarch64")
        set(CMAKE_SYSTEM_PROCESSOR aarch64v)
        add_compile_options(--target=aarch64-arm-none-eabi -Wl,--undefined=__udivti3)
        endif()

        set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
        set(CMAKE_SYSTEM_NAME Linux )
        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <LINK_FLAGS> -o <TARGET> <LINK_LIBRARIES> <OBJECTS>")

    elseif(TOOLCHAIN STREQUAL "LIBFUZZER")
        set(CMAKE_C_COMPILER clang-cl.exe)
        add_compile_options(-fno-strict-aliasing -Wall  -Wno-array-bounds -Wno-address  -flto -DUSING_LTO  -D_CRT_SECURE_NO_WARNINGS /w -DTEST_WITH_LIBFUZZER=TRUE -O1 -fsanitize=fuzzer,address)
        set(MBEDTLS_FLAGS "")
        set(OPENSSL_FLAGS /FIbase.h)
        set(CMOCKA_FLAGS -Wpedantic -Wall -Wshadow -Wmissing-prototypes -Wcast-align -Werror=address -Wstrict-prototypes -Werror=strict-prototypes -Wwrite-strings -Werror=write-strings -Werror-implicit-function-declaration -Wpointer-arith -Werror=pointer-arith -Wdeclaration-after-statement -Werror=declaration-after-statement -Wreturn-type -Werror=return-type -Wuninitialized -Werror=uninitialized -Werror=strict-overflow -Wstrict-overflow=2 -Wno-format-zero-length -Wmissing-field-initializers -Wformat-security -Werror=format-security -Wformat)

        set(CMAKE_STATIC_LINKER_FLAGS "")

        set(CMAKE_LINKER lld-link.exe)
        set(CMAKE_EXE_LINKER_FLAGS "/NOLOGO /SUBSYSTEM:CONSOLE /NODEFAULTLIB:libcmt.lib /IGNORE:4086 /MLLVM:-exception-model=wineh /lldmap /OPT:REF")

        if(ARCH STREQUAL "x64")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:AMD64 /LIBPATH:'%VCToolsInstallDir%lib/x64' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x64' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x64' /LIBPATH:'%LLVM_PATH%/lib/clang/9.0.0/lib/windows'")
        elseif(ARCH STREQUAL "ia32")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:I386 /LIBPATH:'%VCToolsInstallDir%lib/x86' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x86' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x86' /LIBPATH:'%LLVMx86_PATH%/lib/clang/9.0.0/lib/windows'")
        endif()

        set(CMAKE_C_FLAGS_RELEASE     "-Oz")
        set(CMAKE_C_FLAGS_DEBUG       "-O0 -gcodeview")

        set(CMAKE_EXE_LINKER_FLAGS_DEBUG "/DEBUG:GHASH")

        if(ARCH STREQUAL "x64")
            add_compile_options(-m64)
        elseif(ARCH STREQUAL "ia32")
            add_compile_options(-m32 -march=i586)
        endif()

        if(ARCH STREQUAL "x64")
            set(CMAKE_C_STANDARD_LIBRARIES "Kernel32.lib MSVCRTD.lib vcruntimed.lib ucrtd.lib Gdi32.lib User32.lib Winmm.lib Advapi32.lib ws2_32.lib clang_rt.asan_dynamic-x86_64.lib clang_rt.asan_dynamic_runtime_thunk-x86_64.lib clang_rt.fuzzer-x86_64.lib")
        elseif(ARCH STREQUAL "ia32")
            set(CMAKE_C_STANDARD_LIBRARIES "Kernel32.lib MSVCRTD.lib vcruntimed.lib ucrtd.lib Gdi32.lib User32.lib Winmm.lib Advapi32.lib ws2_32.lib clang_rt.asan_dynamic-i386.lib clang_rt.asan_dynamic_runtime_thunk-i386.lib clang_rt.fuzzer-i386.lib")
        endif()

    elseif(TOOLCHAIN STREQUAL "CBMC")
        set(CMAKE_C_COMPILER goto-cl.exe)
        # See https://gitlab.kitware.com/cmake/cmake/-/issues/18317 for following workaround
        STRING(REGEX REPLACE "/W3" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
        add_compile_options(/nologo /WX /W4 /Gs32768 /D UNICODE /Gy /EHs-c- /GR- /GF /Z7 /Oy- /D_CRT_SECURE_NO_WARNINGS /DCBMC_CC)
        set(MBEDTLS_FLAGS /wd4244 /wd4132 /wd4245 /wd4310 /wd4701 /wd4127 /wd4204)
        set(OPENSSL_FLAGS /FIbase.h /wd4090 /wd4132 /wd4244 /wd4245 /wd4267 /wd4306 /wd4310 /wd4700 /wd4389 /wd4702 /wd4706 /wd4819 /wd4013)
        set(CMOCKA_FLAGS /wd4204 /wd4133 /wd4267 /wd4701 /wd4702 /wd4703 /D _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1 /D _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT=1 /D _CRT_NONSTDC_NO_WARNINGS=1)

        set(CMAKE_C_CREATE_STATIC_LIBRARY "")

        set(CMAKE_LINKER goto-cl.exe)

        set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <OBJECTS>")

        set(CMAKE_C_FLAGS_RELEASE     "/GL /O1b2s")
        set(CMAKE_C_FLAGS_DEBUG       "/Od")
    else()
        # See https://gitlab.kitware.com/cmake/cmake/-/issues/18317 for following workaround
        STRING(REGEX REPLACE "/W3" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
        add_compile_options(/nologo /WX /W4 /D UNICODE /Gy /EHs-c- /GR- /GF /Z7 /Gw /Oy- /D_CRT_SECURE_NO_WARNINGS /wd4063 /wd4100 /wd4127 /wd4701 /wd4703 /wd4057)
        set(MBEDTLS_FLAGS /wd4244 /wd4132 /wd4245 /wd4310 /wd4701 /wd4127 /wd4204)
        set(OPENSSL_FLAGS /FIbase.h /wd4090 /wd4132 /wd4244 /wd4245 /wd4267 /wd4306 /wd4310 /wd4700 /wd4389 /wd4702 /wd4706 /wd4819 /wd4013)
        set(CMOCKA_FLAGS /wd4204 /wd4133 /wd4267 /wd4701 /wd4702 /wd4703 /D _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1 /D _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT=1 /D _CRT_NONSTDC_NO_WARNINGS=1)

        set(CMAKE_STATIC_LINKER_FLAGS "/NOLOGO /LTCG")

        set(CMAKE_EXE_LINKER_FLAGS "/NOLOGO /SUBSYSTEM:CONSOLE /NODEFAULTLIB:libcmt.lib /IGNORE:4086 /MAP /OPT:REF")

        set(CMAKE_C_FLAGS_RELEASE     "/GL /O1b2s")
        set(CMAKE_C_FLAGS_DEBUG       "/Od")
        set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/LTCG")
        set(CMAKE_EXE_LINKER_FLAGS_DEBUG "/DEBUG")

        if(ARCH STREQUAL "x64")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:AMD64")
        elseif(ARCH STREQUAL "ia32")
            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MACHINE:I386")
        endif()
        set(CMAKE_C_STANDARD_LIBRARIES "Kernel32.lib MSVCRTD.lib vcruntimed.lib ucrtd.lib Gdi32.lib User32.lib Winmm.lib Advapi32.lib ws2_32.lib")

    endif()
endif()

if(TOOLCHAIN STREQUAL "VS2015")
    if(ARCH STREQUAL "x64")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:'%VCINSTALLDIR%Lib/AMD64' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x64' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x64'")
    elseif(ARCH STREQUAL "ia32")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:'%VCINSTALLDIR%Lib' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x86' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x86'")
    endif()
elseif((TOOLCHAIN STREQUAL "VS2019") OR (TOOLCHAIN STREQUAL "VS2022"))
    if(ARCH STREQUAL "x64")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:'%VCToolsInstallDir%lib/x64' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x64' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x64'")
    elseif(ARCH STREQUAL "ia32")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:'%VCToolsInstallDir%lib/x86' /LIBPATH:'%UniversalCRTSdkDir%lib/%UCRTVersion%/ucrt/x86' /LIBPATH:'%WindowsSdkDir%lib/%WindowsSDKLibVersion%/um/x86'")
    endif()
endif()

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

add_custom_target(copy_sample_key)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_custom_command(TARGET copy_sample_key
                    PRE_BUILD
                    COMMAND cp -r -f ${LIBSPDM_DIR}/unit_test/sample_key/* ${EXECUTABLE_OUTPUT_PATH})
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    STRING(REPLACE "/" "\\" SRC ${LIBSPDM_DIR}/unit_test/sample_key/*)
    if(CMAKE_GENERATOR MATCHES "^Visual Studio")
        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
            STRING(REPLACE "/" "\\" DEST ${EXECUTABLE_OUTPUT_PATH}/Debug)
        else()
            STRING(REPLACE "/" "\\" DEST ${EXECUTABLE_OUTPUT_PATH}/Release)
        endif()
    else()
        STRING(REPLACE "/" "\\" DEST ${EXECUTABLE_OUTPUT_PATH})
    endif()
    add_custom_command(TARGET copy_sample_key
                       PRE_BUILD
                       COMMAND xcopy /y /s ${SRC} ${DEST})
endif()

if(CRYPTO STREQUAL "mbedtls")
    add_subdirectory(${LIBSPDM_DIR}/os_stub/cryptlib_mbedtls out/cryptlib_mbedtls.out)
elseif(CRYPTO STREQUAL "openssl")
    add_subdirectory(${LIBSPDM_DIR}/os_stub/cryptlib_openssl out/cryptlib_openssl.out)
endif()

if(NOT ENABLE_BINARY_BUILD STREQUAL "1")
    if(CRYPTO STREQUAL "mbedtls")
        add_subdirectory(${LIBSPDM_DIR}/os_stub/mbedtlslib out/mbedtlslib.out)
    elseif(CRYPTO STREQUAL "openssl")
        add_subdirectory(${LIBSPDM_DIR}/os_stub/openssllib out/openssllib.out)
    endif()
endif()

    add_subdirectory(${LIBSPDM_DIR}/library/spdm_common_lib out/spdm_common_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_requester_lib out/spdm_requester_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_responder_lib out/spdm_responder_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_crypt_lib out/spdm_crypt_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_secured_message_lib out/spdm_secured_message_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_transport_mctp_lib out/spdm_transport_mctp_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_transport_pcidoe_lib out/spdm_transport_pcidoe_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/library/spdm_transport_tcp_lib out/spdm_transport_tcp_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/memlib out/memlib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/debuglib out/debuglib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/debuglib_null out/debuglib_null.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/rnglib out/rnglib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/malloclib out/malloclib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/spdm_device_secret_lib_${DEVICE} out/spdm_device_secret_lib_${DEVICE}.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/platform_lib out/platform_lib.out)
    add_subdirectory(${LIBSPDM_DIR}/os_stub/spdm_crypt_ext_lib out/spdm_crypt_ext_lib.out)

    add_subdirectory(library/spdm_transport_none_lib)
    add_subdirectory(library/mctp_requester_lib)
    add_subdirectory(library/mctp_responder_lib)
    add_subdirectory(library/pci_doe_requester_lib)
    add_subdirectory(library/pci_doe_responder_lib)
    add_subdirectory(library/pci_ide_km_requester_lib)
    add_subdirectory(library/pci_ide_km_responder_lib)
    add_subdirectory(library/pci_ide_km_device_lib_sample)
    add_subdirectory(library/pci_tdisp_requester_lib)
    add_subdirectory(library/pci_tdisp_responder_lib)
    add_subdirectory(library/pci_tdisp_device_lib_sample)
    add_subdirectory(library/cxl_ide_km_requester_lib)
    add_subdirectory(library/cxl_ide_km_responder_lib)
    add_subdirectory(library/cxl_ide_km_device_lib_sample)
    add_subdirectory(library/cxl_tsp_requester_lib)
    add_subdirectory(library/cxl_tsp_responder_lib)
    add_subdirectory(library/cxl_tsp_device_lib_sample)

    if(NOT TOOLCHAIN STREQUAL "ARM_DS2022")
    add_subdirectory(spdm_emu/spdm_requester_emu)
    add_subdirectory(spdm_emu/spdm_responder_emu)

    add_subdirectory(${COMMON_TEST_FRAMEWORK_DIR}/library/common_test_utility_lib out/common_test_utility_lib.out)
    add_subdirectory(${SPDM_RESPONDER_VALIDATOR_DIR}/library/spdm_responder_conformance_test_lib out/spdm_responder_conformance_test_lib.out)
    add_subdirectory(spdm_emu/spdm_device_validator_sample)

    add_subdirectory(spdm_emu/spdm_device_attester_sample)
    endif()
